Added dynamic user search and a way to register.

--- a/league/league/templates/core/index.html
+++ b/league/league/templates/core/index.html
@@ -3,5 +3,9 @@
 {% block js %}
 {% endblock %}
 {% block content %}
-    <p>This is currently a work in development</p>
+    {% if user.is_authenticated %}
+        <p>Welcome {{user.username}}</p>
+    {% else %}
+        <p>This is currently a work in development</p>
+    {% endif %}
 {% endblock %}
